--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
     "@sendgrid/mail": "^8.1.4",
     "@stripe/react-stripe-js": "^3.6.0",
     "@stripe/stripe-js": "^6.1.0",
+    "@types/js-cookie": "^3.0.6",
     "ai": "^4.3.9",
     "date-fns": "^3.6.0",
     "firebase": "^10.14.1",
     "framer-motion": "^11.3.31",
     "glob": "^10.3.10",
+    "js-cookie": "^3.0.5",
     "lru-cache": "^10.2.0",
     "lucide-react": "^0.436.0",
     "next": "14.1.0",
