--- a/package.json
+++ b/package.json
@@ -19,12 +19,9 @@
     "date-fns": "^3.6.0",
     "firebase": "^10.14.1",
     "framer-motion": "^11.3.31",
-    "glob": "^10.3.10",
     "js-cookie": "^3.0.5",
-    "lru-cache": "^10.2.0",
     "lucide-react": "^0.436.0",
     "next": "14.1.0",
-    "node-fetch": "^2.6.9",
     "openai": "^4.89.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -32,11 +29,12 @@
     "react-markdown": "^9.0.1",
     "recharts": "^2.15.1",
     "replicate": "^0.32.0",
-    "rimraf": "^5.0.5",
+    "sharp": "^0.34.2",
     "stripe": "^17.7.0",
     "twilio": "^5.5.1"
   },
   "devDependencies": {
+    "@next/bundle-analyzer": "^15.3.3",
     "@tailwindcss/forms": "^0.5.7",
     "@types/node": "^20",
     "@types/react": "^18",
