--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "ai": "^4.3.9",
     "date-fns": "^3.6.0",
     "firebase": "^10.14.1",
+    "firebase-admin": "^13.4.0",
     "framer-motion": "^11.3.31",
     "js-cookie": "^3.0.5",
     "lucide-react": "^0.436.0",
@@ -34,12 +35,14 @@
     "twilio": "^5.5.1"
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.27.2",
     "@next/bundle-analyzer": "^15.3.3",
     "@tailwindcss/forms": "^0.5.7",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.4.18",
+    "babel-loader": "^10.0.0",
     "eslint": "8.57.0",
     "eslint-config-next": "14.1.0",
     "postcss": "^8.4.35",
