--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^5.5.0",
+    "react-image-crop": "^11.0.10",
     "react-markdown": "^9.0.1",
     "recharts": "^2.15.1",
     "replicate": "^0.32.0",
